--- a/XAI/Base.lproj/Show_iPhone_Other.storyboard
+++ b/XAI/Base.lproj/Show_iPhone_Other.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="hsi-Ff-krP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="hsi-Ff-krP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -79,17 +79,6 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="YI5-7M-VNY">
-                                        <rect key="frame" x="0.0" y="135" width="320" height="296"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <connections>
-                                            <outlet property="dataSource" destination="qKg-je-DN0" id="lXQ-Ji-Zb7"/>
-                                            <outlet property="delegate" destination="qKg-je-DN0" id="hGF-cQ-bbU"/>
-                                        </connections>
-                                    </tableView>
                                     <view contentMode="scaleToFill" id="Qtx-ep-LTE">
                                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -119,6 +108,17 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="kKc-tF-w29">
+                                        <rect key="frame" x="0.0" y="135" width="325" height="298"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="qKg-je-DN0" id="daR-PN-e7Z"/>
+                                            <outlet property="delegate" destination="qKg-je-DN0" id="er6-61-yfd"/>
+                                        </connections>
+                                    </tableView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.72623470279720281" green="0.90321787587412583" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
@@ -138,7 +138,7 @@
                     </view>
                     <connections>
                         <outlet property="moveView" destination="Hgf-uQ-Whh" id="2pB-lf-ZoT"/>
-                        <outlet property="tableView" destination="YI5-7M-VNY" id="ONj-pP-tTS"/>
+                        <outlet property="tableView" destination="kKc-tF-w29" id="aqZ-Kd-Gm8"/>
                         <outlet property="textField" destination="GgY-G1-zEP" id="taH-KH-oFP"/>
                     </connections>
                 </viewController>
