--- a/XAI/Base.lproj/SwitchBtnView.xib
+++ b/XAI/Base.lproj/SwitchBtnView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -8,33 +8,19 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="YRA-PT-2AO" customClass="XAISwitchBtn">
-            <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" id="HZJ-en-InA">
-                    <rect key="frame" x="8" y="23" width="145" height="115"/>
+                    <rect key="frame" x="0.0" y="23" width="145" height="95"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="g1l-7p-99W" userLabel="edit">
-                            <rect key="frame" x="0.0" y="0.0" width="60" height="50"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" image="dev_change.png">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ZDD-dn-Kpg" userLabel="del">
-                            <rect key="frame" x="85" y="0.0" width="60" height="50"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                            <state key="normal" image="dev_del_nor.png">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
                         <view contentMode="scaleToFill" id="epd-5j-m98">
-                            <rect key="frame" x="25" y="10" width="95" height="95"/>
+                            <rect key="frame" x="25" y="6" width="90" height="90"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="faF-Qv-POV">
-                                    <rect key="frame" x="5" y="5" width="85" height="85"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <state key="normal">
@@ -43,23 +29,23 @@
                                     </state>
                                 </button>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switch_nor.png" id="Bdx-ul-tlO">
-                                    <rect key="frame" x="0.0" y="0.0" width="95" height="95"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switch_off_text.png" id="kY1-Dy-R0c">
-                                    <rect key="frame" x="26" y="39" width="42" height="17"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switch_off_tip.png" id="Wbk-Td-vdi">
-                                    <rect key="frame" x="45" y="18" width="5" height="5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switch_unk.png" id="tGr-XI-gc1">
-                                    <rect key="frame" x="33" y="34" width="28" height="28"/>
+                                    <rect key="frame" x="31" y="31" width="28" height="28"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </imageView>
                                 <view userInteractionEnabled="NO" contentMode="scaleToFill" id="cjI-TI-acx">
-                                    <rect key="frame" x="33" y="34" width="28" height="28"/>
+                                    <rect key="frame" x="31" y="31" width="28" height="28"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="switch_wait_tip.png" id="FBE-GV-Cyk">
@@ -80,7 +66,7 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="主卧开关" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="q5w-nt-9Lo">
-                    <rect key="frame" x="0.0" y="2" width="160" height="30"/>
+                    <rect key="frame" x="0.0" y="2" width="140" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -88,13 +74,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入备注" textAlignment="center" minimumFontSize="17" id="rv5-kG-u2h">
-                    <rect key="frame" x="10" y="2" width="140" height="30"/>
+                    <rect key="frame" x="0.0" y="2" width="140" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="操作时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b2b-hr-ME7">
-                    <rect key="frame" x="0.0" y="139" width="160" height="21"/>
+                    <rect key="frame" x="0.0" y="120" width="140" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -111,8 +97,6 @@
                 <outlet property="bgBtn" destination="faF-Qv-POV" id="oD7-aR-tyb"/>
                 <outlet property="bgImgView" destination="Bdx-ul-tlO" id="0G4-2x-Vku"/>
                 <outlet property="bgView" destination="epd-5j-m98" id="hRs-Sg-RdU"/>
-                <outlet property="delBtn" destination="ZDD-dn-Kpg" id="cPh-kB-zfY"/>
-                <outlet property="editBtn" destination="g1l-7p-99W" id="OkB-Uw-A88"/>
                 <outlet property="nameTF" destination="rv5-kG-u2h" id="3Qs-UV-LAd"/>
                 <outlet property="nameTipLab" destination="q5w-nt-9Lo" id="B8p-3d-Jdf"/>
                 <outlet property="oprTipLab" destination="b2b-hr-ME7" id="l9f-vk-ccP"/>
@@ -126,14 +110,12 @@
         </view>
     </objects>
     <resources>
-        <image name="dev_change.png" width="23" height="23"/>
-        <image name="dev_del_nor.png" width="23" height="23"/>
-        <image name="switch_nor.png" width="94" height="95"/>
-        <image name="switch_off_text.png" width="42" height="17"/>
-        <image name="switch_off_tip.png" width="5" height="5"/>
+        <image name="switch_nor.png" width="89" height="89"/>
+        <image name="switch_off_text.png" width="89" height="89"/>
+        <image name="switch_off_tip.png" width="89" height="89"/>
         <image name="switch_unk.png" width="28" height="28"/>
-        <image name="switch_wait_rol.png" width="28" height="28"/>
-        <image name="switch_wait_tip.png" width="28" height="28"/>
+        <image name="switch_wait_rol.png" width="26" height="26"/>
+        <image name="switch_wait_tip.png" width="26" height="26"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
